--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Orelega+One&display=swap');
 
 body {
-    fo
+    font-family: 'Orelega One', cursive;
 }
