--- a/public/style.css
+++ b/public/style.css
@@ -4,11 +4,12 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    color: #fff;
 }
 
 body {
     font-family: 'Orelega One', cursive;
-    background-image: url(./image/backgoud.jpg);
+    background-image:linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(./image/backgoud.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
