--- a/public/style.css
+++ b/public/style.css
@@ -19,6 +19,7 @@ body {
 
 header {
     font-size: 1.70rem;
+    
 }
 
 header, main {
@@ -26,4 +27,20 @@ header, main {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+main {
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
+  color: white;
+  font-weight: bold;
+  border: 3px solid #f1f1f1;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  width: 80%;
+  padding: 20px;
+  text-align: center;
 }
