--- a/public/style.css
+++ b/public/style.css
@@ -19,7 +19,6 @@ body {
 
 header {
     font-size: 1.70rem;
-    
 }
 
 header, main {
@@ -43,4 +42,20 @@ main {
   width: 80%;
   padding: 20px;
   text-align: center;
+}
+
+main button{
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 18px 0;
+    border: none;
+    cursor: pointer;
+    width: 50%;
+    opacity: 0.9;
+}
+
+main button:hover{
+    opacity: 13;
+    background-color: black;
 }
