--- a/public/style.css
+++ b/public/style.css
@@ -32,8 +32,7 @@ main {
   background-color: rgb(0,0,0); /* Fallback color */
   background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
   color: white;
-  font-weight: bold;
-  border: 3px solid #f1f1f1;
+  font-weight: lighter;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -42,6 +41,7 @@ main {
   width: 80%;
   padding: 20px;
   text-align: center;
+  display: inline;
 }
 
 main button{
